--- a/v1/package.json
+++ b/v1/package.json
@@ -27,6 +27,7 @@
     "rimraf": "^6.0.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   }
