--- a/v1/package.json
+++ b/v1/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   }
