--- a/v1/package.json
+++ b/v1/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^20.14.11",
+    "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
@@ -27,6 +28,7 @@
     "rimraf": "^6.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "ts-node": "^10.9.2",
